--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-POSTGRES_USER=root
-POSTGRES_PASSWORD=password
+POSTGRES_USER=lmsadmin
+POSTGRES_PASSWORD=75thRanger!
 POSTGRES_DB=n8n
 
-N8N_ENCRYPTION_KEY=super-secret-key
-N8N_USER_MANAGEMENT_JWT_SECRET=even-more-secret
+N8N_ENCRYPTION_KEY=21n2d3R4a5n6g7e8r9Bat!
+N8N_USER_MANAGEMENT_JWT_SECRET=21n2d3R4a5n6g7e8r9Bat!!
